--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,6 @@ AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
-AMDGPU = "0.5"
+AMDGPU = "0.5, 0.6"
 Reexport = "1"
 julia = "1.9"
