--- a/Project.toml
+++ b/Project.toml
@@ -1,13 +1,22 @@
 name = "LuxAMDGPU"
 uuid = "83120cb1-ca15-4f04-bf3b-6967d2e6b60b"
 authors = ["Avik Pal <avikpal@mit.edu> and contributors"]
-version = "0.2.1"
+version = "0.2.2"
 
 [deps]
 AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
+Aqua = "0.8"
 AMDGPU = "0.8"
 Reexport = "1"
+Test = "1.9"
 julia = "1.9"
+
+[extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Aqua", "Test"]
