--- a/Project.toml
+++ b/Project.toml
@@ -8,8 +8,8 @@ AMDGPU = "21141c5a-9bdb-4563-92ae-f87d6854732e"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 
 [compat]
+AMDGPU = "0.8, 0.9"
 Aqua = "0.8"
-AMDGPU = "0.8"
 Reexport = "1"
 Test = "1.9"
 julia = "1.9"
